<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/darkBlue"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Already \nhave an \naccount?" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_food_truck_svgrepo_com" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editLoginTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editLoginTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:id="@+id/forgotPasswordText"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="Forgot Password?"
                android:clickable="true"
                android:textColor="@color/white"
                android:textSize="@dimen/newsMoreTextSize" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Login"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <TextView
                android:id="@+id/register"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="New user? Register Now"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/continueGuest"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Continue as Guest"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gotoBusinessLogin"
                style="@style/businessOwnerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Business owner? Click here"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"/>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_side_bg"
        android:backgroundTint="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="toRegisterPage"
        android:src="@drawable/ic_add_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
