<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/forgot_password_page"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".activity.forgotPasswordActivity">


    <com.google.android.material.textfield.TextInputLayout
...
