<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/darkBlue"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="149dp"
                android:padding="0dp">


                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="Register\n Below!"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_food_truck_svgrepo_com" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/lightBlue"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:hint="Name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_email_hint"

                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:hint="Mobile Number"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        style="@style/loginButton"
                        android:text="Register"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />


                    <TextView
                        android:id="@+id/existingAccount"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Sign-in to existing account"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"/>


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="toLoginPage"
        android:src="@drawable/ic_back_img"
        />
</RelativeLayout>